src/objects/MICO_AC_History__c.object
<CustomObject>
    <description>Business Description: This object is used to automatically keep a track of all changes to Acceptance Criteria on a user story.

Technical Description: Populated by a trigger on User Story this is an enhancement to the standard  user story history functionality as this does not log changes to rich text fields

Used In: Mission Control App</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <inlineHelpText>The old acceptance criteria before this person edited the user story.
To see what the acceptance criteria was changed to, compare this to the next Acceptance Criteria History record.</inlineHelpText>
        <label>Previous Acceptance /Compliance Criteria</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_by_me__c</fullName>
        <formula>if(CreatedById = $User.Id , &quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acceptance Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Criteria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>MICO_User_Story__c</referenceTo>
        <relationshipName>MICO_AC_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>User Story AC/CC History</label>
    <nameField>
        <displayFormat>ACH-{0000}</displayFormat>
        <label>AC History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story AC/CC History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>